--- a/react/paybird/index.html
+++ b/react/paybird/index.html
@@ -5,6 +5,11 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite + React</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inder&display=swap"
+			rel="stylesheet"
+		/>
+
 		<!-- Thêm Font Awesome vào đây -->
 		<!-- Thêm CDN Font Awesome -->
 	</head>
